COMPILE_DEPS = CORE_DEPS + JACKSON + REST + [
    "//core/common:onos-core-common",
]

osgi_jar_with_tests(
    deps = COMPILE_DEPS,
)

REQUIRE_APPS = [
    "org.onosproject.proxyarp",
]

onos_app(
    category = "Network User Limiter amir",
    description = "Intent Network User Limiter amir",
    required_apps = REQUIRE_APPS,
    title = "Amir Network User Limiter",
    url = "https://www.ict.com",
)
